--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-12">
 					<div class="offer-box-products">
-						<img class="img-fluid" src="images/add-img-02.jpg" alt="" />
+						<img class="img-fluid" src="images/add-img-02.JPG" alt="" />
 					</div>
 				</div>
 			</div>
